name:                carry
version:             0.1.0.0
synopsis: A functional programming language inspired by Haskell.
description: Carry will be a functional programming language with lazy
  evaluation and a Haskell like syntax and yet to be designed features for
  smoother integration with object oriented APIs.
homepage:            https://github.com/quickdudley/carry#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD-3
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable carryi
  hs-source-dirs:      interpreter
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
    array,
    containers,
    text,
    lens,
    phaser >= 1.0.0.1,
    phaser-indent
  default-language:    Haskell2010

test-suite carry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/carry
